# ShopLiftOpenGL

./: CMakeLists.txt  main.cpp  vcpkg.json
assets/Shaders/: Fragment.glsl  Vertex.glsl
assets/TestAssets/: TestPlayer.fbx
src/: Mesh.cpp  Mesh.h  Model.h  Transform3D.h
src/Controllers/: FPSController.cpp  FPSController.h
src/Material/: Material.cpp  Material.h
src/Mesh/: Mesh.cpp  Mesh.h
src/Shaders/: Shader.cpp  Shader.h
src/Shaders/ShadersProgram/: ShadersProgram.cpp  ShadersProgram.h
src/Texture/: Texture.cpp  Texture.h
src/Transform/: Transform3D.h
